[InputEvent] Update spec link for StaticRange.idl and use unsigned offset

This CL:
1. Add link to latest spec in StaticRange.idl
  * https://garykac.github.io/staticrange/#interface-staticrange
2. Replace |int start/endOffset| with |unsigned start/endOffset| to match spec

BUG=707913

Review-Url: https://codereview.chromium.org/2793093002
Cr-Commit-Position: refs/heads/master@{#461725}

Former-commit-id: b3279fff89f248e0bf264586cc2c71f19d97de40